martin-mbtiles/tests/snapshots/mbtiles__diff_and_apply@applied__flat-hash=norm.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: result
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "E3919F24AF46757C7B060150071FB0D9"  )',
    '(  "md-edit", "value - v2"  )',
    '(  "md-new", "value - new"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles'
sql = '''
CREATE TABLE tiles (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  1, 0, 0, blob(same)  )',
    '(  1, 0, 1, blob(edit-v2)  )',
    '(  1, 1, 0, blob(new)  )',
    '(  1, 1, 1, blob(remove)  )',
    '(  2, 0, 0, blob(z2-same)  )',
    '(  2, 0, 1, blob(z2-edit-v2)  )',
    '(  2, 1, 0, blob(z2-new)  )',
    '(  2, 1, 1, blob(z2-remove)  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles'
