martin-mbtiles/tests/snapshots/mbtiles__diff_and_apply@applied__hash-flat=hash.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: result
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "E3919F24AF46757C7B060150071FB0D9"  )',
    '(  "md-edit", "value - v2"  )',
    '(  "md-new", "value - new"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles_with_hash'
sql = '''
CREATE TABLE tiles_with_hash (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             tile_hash text,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  1, 0, 0, blob(same), "51037A4A37730F52C8732586D3AAA316"  )',
    '(  1, 0, 1, blob(edit-v2), "FF76830FF90D79BB335884F256031731"  )',
    '(  1, 1, 0, blob(new), "22AF645D1859CB5CA6DA0C484F1F37EA"  )',
    '(  2, 0, 0, blob(z2-same), "6F75FF79F5F1B1B50092156993AAAA70"  )',
    '(  2, 0, 1, blob(z2-edit-v2), "E848A12B5761ED5E713D8286F7460C98"  )',
    '(  2, 1, 0, blob(z2-new), "8FF2EF577CE68CA2A07E6382D8A4C5FF"  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles_with_hash'

[[]]
type = 'view'
tbl_name = 'tiles'
sql = '''
CREATE VIEW tiles AS
             SELECT zoom_level, tile_column, tile_row, tile_data FROM tiles_with_hash'''
